Añadi gif utilizando async/await no es un buscador de gif

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
   <body class="container">
     <header class="text-center mt-5">
-      <h1>Explorador de Usuarios</h1>
+      <img id="migif" alt="Gif opcional" />
+      <h1 class="mt-5">Explorador de Usuarios</h1>
     </header>
     <main>
       <div class="row justify-content-center">
